main: [platform] document and deprecate methods in OpenedPackages